# quiz-game

./: Cargo.toml
data/: matematika.json  questions.json
src/: main.rs
